Display name, more documentation, more comments

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                 </div>
                 <div class="layout_controls">
                     <button id="button_reset_layout">Reset Camera</button>
+                    <div class="div_name_info">
+                        <p>Name of Current Selection</p>
+                        <p id="p_name_info">Test</p>
+                    </div>
                     <button id="button_remove_selection">Remove Selection</button>
                 </div>
             </div>
